# Chef-de-recetas

./: README.md  model.py  pyproject.toml  rec.py  recetas2.csv  requirements2.txt
static/: ingredientes-cocinar-tabla-cortar-vacia-mesa-madera-vieja-cocina-alimentos-fondo-alimentacion-saludable-fondo-negro-vista-superior-espacio-copia_89816-37169.avif  style.css
templates/: index.html
