[tool.poetry]
name = "difference-equations"
version = "0.1.0"
description = ""
authors = ["Alessandro Aguilar <alessandro.aguilar.chombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
panel = "^1.5.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
altair = {extras = ["all"], version = "^5.4.1"}
jupyter-bokeh = "^4.0.5"
bokeh = "^3.6.0"
pyviz-comms = "^3.0.3"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
